--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -26,6 +26,7 @@ layout: compress
       {% include slide14.html %}
       {% include slide15.html %}
       {% include slide16.html %}
+      {% include slide17.html %}
       {% include gallery.html %}
 
       <script src="{{ site.assets_base_url }}/assets/bundle{{ site.env.HASH }}.js"></script>
