--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -1,6 +1,6 @@
 <section class="vh-100 default-background relative">
   <script src="https://unpkg.com/packery@2/dist/packery.pkgd.min.js"></script>
-  <div class="wrapper h-100 flex flex-column relative">
+  <div class="wrapper flex flex-column relative">
     <main class="w-100 mt6-ns mt4 flex justify-between items-center" aria-label="CIGI">
       <h1>
         Photo Gallery
@@ -14,37 +14,39 @@
     <p>
       Lorem ipsum dolor sit amet
     </p>
-    <div class="mt5 h-50 gallery relative" id="gallery">
+  </div>
+  <div class="w-80 m-auto">
+    <div class="mt5 vh-50 gallery relative" id="gallery">
       <div class="w-100 h-100 z-1 bg-black-70 absolute" id="load-overlay">
         <svg class="spinner" width="50" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#fff" stroke-width="10">
           <path d="M 50 5 A 45 45 0 1 1 5 50">
           </path>
         </svg>
       </div>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/800/450?image=1011'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/600/850?image=11'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/850?image=1075'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=14'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=15'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=16'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=17'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=18'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=19'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=20'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=21'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=23'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=24'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=25'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=26'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=27'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=28'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=29'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=30'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=33'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=34'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/350?image=35'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/350?image=42'/>
-      <img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/350?image=46'/>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/800/450?image=1011'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/600/850?image=11'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/850?image=1075'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=14'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=15'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=16'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=17'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=18'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=19'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=20'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=21'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=23'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=24'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=25'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=26'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=27'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=28'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=29'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=30'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=33'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/650?image=34'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/350?image=35'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/350?image=42'/></div>
+      <div class="gallery-img-wrapper"><img alt="Lorem ipsum dolor sit amet" src='https://unsplash.it/900/350?image=46'/></div>
     </div>
   </div>
 </section>
