--- a/_includes/slide17.html
+++ b/_includes/slide17.html
@@ -4,8 +4,9 @@
             <div class="tabs" data-slide="slide-17">
                 <div class="tab toggle" data-id="tab-1">Auditor's Report</div>
                 <div class="tab toggle" data-id="tab-2">Balance Sheet</div>
+                <div class="download"><a href="#">Download PDF</a></div>
             </div>
-            <div class="download">Download PDF</div>
+           
             <div class="tab-content">
                 <div class="tab" data-id="tab-1">
                     {% markdown template_content/slide17-auditor.md %}
