--- a/_includes/slide17-sheet2.html
+++ b/_includes/slide17-sheet2.html
@@ -1,16 +1,16 @@
 <table class="balance-sheet">
-<thead>
-    <tr>
-        <td>2017</td>
-        <td>2017</td>
-    </tr>
-    <tr>
-        <td>Summarized Statement of Revenue, Expenses and Changes in Fund Balances for the year ended July 31, 2016</td>
-        <td>Total</td>
-    </tr>                        
-</thead>
+    <thead>
+        <tr class="year">
+            <td>2017</td>
+            <td>2017</td>
+        </tr>   
+        <tr class="title">
+            <td>Summarized Statement of Revenue, Expenses and Changes in Fund Balances for the year ended July 31, 2016</td>
+            <td>Total</td>
+        </tr>                        
+    </thead>
 <tbody>
-    <tr>
+    <tr class="section">
         <td>Revenue</td>
         <td></td>
     </tr>
@@ -30,11 +30,11 @@
         <td>Unrealized Investment Income (Loss)</td>
         <td>331,580</td>
     </tr>
-    <tr>
+    <tr class="total">
         <td></td>
-        <td>11,243,683</td>
+        <td class="single">11,243,683</td>
     </tr>
-    <tr>
+    <tr class="section">
         <td>Expenses</td>
         <td></td>
     </tr>
@@ -58,9 +58,9 @@
         <td>Technical Support</td>
         <td>920,083</td>
     </tr>
-    <tr>
+    <tr class="total">
         <td></td>
-        <td>18,876,574</td>
+        <td class="single">18,876,574</td>
     </tr>
     <tr>
         <td>Excess of Revenue over Expenses<br>(Expenses over Revenue)</td>
@@ -70,13 +70,13 @@
         <td>Interfund Transfers</td>
         <td>-</td>
     </tr>
-    <tr>
+    <tr class="total">
         <td>Fund Balances, Beginning of the Year</td>
         <td>222,028,080</td>
     </tr>
     <tr>
         <td>Fund Balances, End of the Year</td>
-        <td>214,395,189</td>
+        <td class="top">214,395,189</td>
     </tr>
 </tbody>
 </table>
