--- a/_includes/slide17-sheet1.html
+++ b/_includes/slide17-sheet1.html
@@ -1,16 +1,16 @@
 <table class="balance-sheet">
 <thead>
-    <tr>
+    <tr class="year">
         <td>2017</td>
         <td>2017</td>
-    </tr>
-    <tr>
+    </tr>   
+    <tr class="title">
         <td>Summarized Balance Sheet as at July 31, 2016</td>
         <td>Total</td>
     </tr>                        
 </thead>
 <tbody>
-    <tr>
+    <tr class="section">
         <td>Current Assets</td>
         <td></td>
     </tr>
@@ -37,11 +37,11 @@
         <td>Prepaid Expenses</td>
         <td>351,840</td>
     </tr>
-    <tr>
+    <tr class="total">
         <td></td>
-        <td>152,325,249</td>
+        <td class="single">152,325,249</td>
     </tr>
-    <tr>
+    <tr class="section">
         <td>Other Assets</td>
         <td></td>
     </tr>
@@ -53,15 +53,15 @@
         <td>Lease Inducement</td>
         <td>-</td>
     </tr>
-    <tr>
+    <tr class="total">
         <td></td>
-        <td>64,567,007</td>
+        <td class="single">64,567,007</td>
     </tr>
-    <tr>
+    <tr class="section total">
         <td>Total Assets</td>
-        <td>216,892,256</td>
+        <td class="double">216,892,256</td>
     </tr>
-    <tr>
+    <tr class="section">
         <td>Current Liabilities</td>
         <td></td>
     </tr>
@@ -77,11 +77,11 @@
         <td>Unrealized Loss on Forward Contracts</td>
         <td>994,337</td>
     </tr>
-    <tr>
+    <tr class="section total">
         <td>Total Liabilities</td>
-        <td>2,497,067</td>
+        <td class="top double">2,497,067</td>
     </tr>
-    <tr>
+    <tr class="section">
         <td>Fund Balances</td>
         <td></td>
     </tr>
@@ -101,11 +101,11 @@
         <td>Unrestricted</td>
         <td>26,448,494</td>
     </tr>
-    <tr>
+    <tr class="section total">
         <td>Total Fund Balances</td>
-        <td>214,395,189</td>
+        <td class="single">214,395,189</td>
     </tr>
-    <tr>
+    <tr class="section total">
         <td>Total Liabilities and Fund Balances</td>
         <td>216,892,256</td>
     </tr>
