--- a/_includes/slide17.html
+++ b/_includes/slide17.html
@@ -1,10 +1,11 @@
-<section class="vh-100 default-background standard-slide financials" id="slide-17">
+<section class="vh-100 default-background financials" id="slide-17">
     <div class="wrapper h-100">
         <div class="flex center flex-column w-100 pt5 pt6-ns">
             <div class="tabs" data-slide="slide-17">
                 <div class="tab toggle" data-id="tab-1">Auditor's Report</div>
                 <div class="tab toggle" data-id="tab-2">Balance Sheet</div>
-                <div class="download"><a href="#">Download PDF</a></div>
+                <div class="tab toggle" data-id="tab-3">Balance Sheet</div>
+                <div class="download"><a class="no-underline" href="#">Download PDF</a></div>
             </div>
            
             <div class="tab-content">
@@ -15,11 +16,10 @@
                     </div>
                 </div>
                 <div class="tab" data-id="tab-2">
-                    {% markdown template_content/slide17-sheet.md %}
-                    <div class="col">
                       {% include slide17-sheet1.html %}
-                      {% include slide17-sheet2.html %}
-                    </div>
+                </div>
+                <div class="tab" data-id="tab-3">
+                        {% include slide17-sheet2.html %}
                     <div class="notes">
                         <h4>Notes</h4>
                         <p>Resources contributed for endowment are included in the Long Term Endowment Fund. Certain of such resources are to be held for a period of ten years or upon the dissolution, liquidation or winding up of the Organization, whichever occurs later. Certain of such resources contributed by the Federal Government of Canada is restricted in perpetuity. Investment income earned on resources of the Long Term Endowment Fund is reported in the Operating and Capital Fund.</p>
