--- a/_includes/slide17.html
+++ b/_includes/slide17.html
@@ -1,6 +1,6 @@
 <section class="vh-100 default-background financials" id="slide-17">
     <div class="wrapper h-100">
-        <div class="flex center flex-column w-100 pt5 pt6-ns">
+        <div class="w-100 pt5 pt6-ns">
             <div class="tabs" data-slide="slide-17">
                 <div class="tab toggle" data-id="tab-1">Auditor's Report</div>
                 <div class="tab toggle" data-id="tab-2">Balance Sheet</div>
