--- a/_includes/slide17-sheet2.html
+++ b/_includes/slide17-sheet2.html
@@ -1,4 +1,4 @@
-<table class="balance-sheet">
+<table class="balance-sheet table2">
     <thead>
         <tr class="year">
             <td>2017</td>
