--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -91,10 +91,6 @@
         color: white;
       }
     }
-    @include media-query($on-laptop){
-      margin-left: 0;
-      margin-top: 0.5rem;
-    }
   }
 }
 
@@ -390,6 +386,7 @@ p {
     margin-bottom: 1rem;
   }
   .notes{
+    float: left;
     h4{
       color: $grey-color-dark;
       font-size: 1rem;
@@ -398,6 +395,9 @@ p {
     p{
       font-size: 0.6825rem;
       padding-bottom: 0.5rem;
+    }
+    @include media-query($on-laptop){
+      float: none;
     }
   }
   table{
@@ -408,6 +408,11 @@ p {
     margin: 1rem 0;
     font-size: 0.875rem;
     border-bottom: double rgb(156,156,156);
+    @include media-query($on-laptop){
+     float: none;
+     width: 100%;
+    }
+
     &.table1{
       margin-right: 5%;
     }
