--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -5,7 +5,7 @@
 }
 
 .slide-5 {
-
+  
 }
 
 .slide-6{}
@@ -22,7 +22,14 @@
 
 .slide-10{}
 
-.slide-11{}
+.slide-11{
+  video { 
+    position: fixed;
+    min-width: 100%;
+    z-index: -100;
+    background-size: cover;
+  }
+}
 
 .slide-12 {
   background-image: url('../assets/wrc-min.jpg');
@@ -31,7 +38,12 @@
 .slide-13{}
 
 .slide-14 {
-  background-image: url('../assets/blockchain-min.jpg');
+  video { 
+    position: fixed;
+    min-width: 100%;
+    z-index: -100;
+    background-size: cover;
+  }
 }
 
 .slide-15 {
@@ -75,10 +87,10 @@
   .tab:nth-child(1){
     border-right: none;
   }
-
+  
   .tab.selected {
     border: solid 1px $accent-color;
-
+    
   }
   .download{
     margin-left: 0.625rem;
@@ -105,11 +117,11 @@ header .tabs{
 .tab-content {
   .tab {
     display: none;
-
+    
     &.selected {
       display: block;
     }
-
+    
     h1 {
       flex: 100%;
     }
@@ -129,37 +141,37 @@ p {
   background-size: cover;
   overflow: hidden;
   position: relative;
-
+  
   .wrapper{
     position: relative;
   }
-
+  
   h1 {
     font-size: 3rem;
     line-height: 3.35rem;
     padding: 0.5rem 0;
     font-weight: 400;
   }
-
+  
   h3 {
     font-size: 1rem;
     padding-bottom: 0.5rem;
     text-transform: uppercase;
   }
-
+  
   a{
     color: $accent-color;
     text-decoration: none;
-
+    
     &:hover{
       color: $accent-color-50;
     }
   }
-
+  
   .fa{
     margin-right: 0.5rem;
   }
-
+  
   .fa-play{
     border: solid 1px $accent-color;
     padding: 0.125rem;
@@ -172,7 +184,7 @@ p {
   h3 {
     display: none;
   }
-
+  
   .col {
     column-count: 2;
     column-width: 450px;
@@ -184,7 +196,7 @@ p {
     text-align: center;
     color: $accent-color;
   }
-
+  
   hr {
     align-self: center;
     border: 0;
@@ -193,7 +205,7 @@ p {
     padding-bottom: 1.5rem;
     width: 50%;
   }
-
+  
 }
 
 .cover-slide::before,
@@ -215,7 +227,7 @@ p {
   .wrapper{
     position: relative;
   }
-
+  
   .circle{
     position: absolute;
     top: 25%;
@@ -224,9 +236,9 @@ p {
     height: 500px;
     border-radius: 50%;
     border: solid 1px rgb(210,211,205);
-
+    
   }
-
+  
   .arc {
     position: absolute;
     top: 23%;
@@ -238,7 +250,7 @@ p {
     border-radius: 50%;
     transform: rotate(-55deg);
   }
-
+  
   .content-wrapper{
     z-index: 100;
     left: 50%;
@@ -247,35 +259,35 @@ p {
     position: absolute;
     width: 80%;
   }
-
+  
   .content{
     column-count: 2;
     column-width: 300px;
   }
-
+  
   h1{display: none;}
-
+  
   .title{
     margin-left: 4rem;
     font-size: 9rem;
     line-height: 73%;
     font-weight: 800;
     color: rgba(120,120,118, 0.85);
-
+    
     span{
       margin-left: -2rem;
     }
   }
-
+  
   .nav{
     margin: 2rem;
     left: 47%;
     position: absolute;
-
+    
     > div{
       float: left;
     }
-
+    
     .link {
       float: left;
       border-top: solid 1px $grey-color;
@@ -283,7 +295,7 @@ p {
       text-transform: uppercase;
       color: $accent-color;
       font-weight: 500;
-
+      
       &:hover{
         color: $grey-color;
       }
@@ -295,11 +307,11 @@ p {
       border-right: solid 1px $grey-color;
       padding-right: 1rem;
     }
-
+    
     .view-ar .link{
       padding-left: 1rem;
     }
-
+    
     .up, .down{
       position: absolute;
     }
@@ -313,7 +325,7 @@ p {
       margin-top: 13px;
       right: -2rem;
     }
-
+    
     .fa{
       display: block;
       font-size: 1.75rem;
@@ -321,7 +333,7 @@ p {
       margin-top: -7px;
       color: $accent-color;
     }
-
+    
     .arrow-1{
       opacity: 1;
       transition: opacity .5s ease-in-out;
@@ -332,7 +344,7 @@ p {
     .arrow-3{
       opacity: 0;
     }
-
+    
     .explore, .view-ar{
       &:hover{
         .arrow-1{
@@ -357,9 +369,9 @@ p {
         opacity: 0;
       }
     }
-
+    
   }
-
+  
   @include media-query($on-laptop) {
     .nav{
       position: relative;
@@ -368,11 +380,11 @@ p {
     .arc {
       left: 8%;
     }
-
+    
     .content-wrapper{
       width: 100%;
     }
-
+    
     .title{
       margin-left: 2rem;
       margin-bottom: 1rem;
@@ -409,10 +421,10 @@ p {
     font-size: 0.875rem;
     border-bottom: double rgb(156,156,156);
     @include media-query($on-laptop){
-     float: none;
-     width: 100%;
+      float: none;
+      width: 100%;
     }
-
+    
     &.table1{
       margin-right: 5%;
     }
@@ -422,7 +434,7 @@ p {
     td:nth-child(2){
       width: 30%;
     }
-
+    
     thead{
       .year{
         background: rgb(156,156,156);
@@ -443,7 +455,7 @@ p {
         &:nth-child(1){
           border-right: solid 0.5rem $default-background-color;
         }
-       
+        
       }
     }
     tbody{
