--- a/_includes/slide11.html
+++ b/_includes/slide11.html
@@ -1,4 +1,7 @@
 <section class="vh-100 standard-slide slide-11">
+    <video playsinline autoplay muted loop>
+      <source src="../assets/wind_turbine_2-4mbps.mp4" type="video/mp4">
+      </video>
   <div class="wrapper h-100">
     <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
       {% markdown template_content/slide11-climate.md %}
