--- a/_includes/slide11.html
+++ b/_includes/slide11.html
@@ -1,14 +1,17 @@
 <section class="vh-100 standard-slide slide-11">
-    <video playsinline autoplay muted loop>
-      <source src="../assets/wind_turbine_2-4mbps.mp4" type="video/mp4">
-      </video>
   <div class="wrapper h-100">
     <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
       {% markdown template_content/slide11-climate.md %}
       <div class="lightbox-link">
-          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-play" aria-hidden="true"></i>See Jeff Rubin talk about soy crops in Canada at CIGI.
-          </a>
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-play" aria-hidden="true"></i>See Jeff Rubin talk about soy crops in Canada at CIGI.
+        </a>
       </div>
     </div>
   </div>
+  <div class="fullscreen-bg">
+    <video loop muted autoplay class="fullscreen-bg-video">
+      <source src="{{ "/data/wind_turbine_2-4mbps.mp4" | relative_url }}" type="video/mp4">
+    </video>
+  </div>
 </section>
+  
