--- a/_includes/slide12.html
+++ b/_includes/slide12.html
@@ -1,7 +1,4 @@
 <section class="vh-100 standard-slide slide-12">
-    <video poster="../assets/wrc-min.jpg" playsinline autoplay muted loop>
-      <source src="../assets/WRC-Loop3-ColourFade-2-4mbps.mp4" type="video/mp4">
-      </video>
   <div class="wrapper h-100">
     <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
       {% markdown template_content/slide12-refugee.md %}
@@ -11,5 +8,10 @@
           </a>
       </div>
     </div>
+  </div>
+  <div class="fullscreen-bg">
+      <video loop muted autoplay class="fullscreen-bg-video">
+          <source src="{{ "/data/WRC-Loop1-Hard_Cut-2-4mbps.mp4" | relative_url }}" type="video/mp4">
+      </video>
   </div>
 </section>
