--- a/_includes/slide14.html
+++ b/_includes/slide14.html
@@ -1,20 +1,21 @@
 <section class="vh-100 standard-slide slide-14">
-  <video poster="../assets/blockchain.png" playsinline autoplay muted loop>
-    <source src="../assets/blockchain_2-4mbps.mp4" type="video/mp4">
-    </video>
-    <div class="wrapper h-100">
-      <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
-        {% markdown template_content/slide14-blockchain.md %}
-        <div class="view-article pb2 pt2">
-          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/blockchains-and-g20-building-inclusive-transparent-and-accountable-digital-economy?source=2017" target="_blank"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the Report</a>
-        </div>
-        <div class="lightbox-link">
-          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-play" aria-hidden="true"></i>Watch the companion video to Julie Maupin’s report on realizing policy through blockchain
-            
-          </a>
-        </div>
+  <div class="wrapper h-100">
+    <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
+      {% markdown template_content/slide14-blockchain.md %}
+      <div class="view-article pb2 pt2">
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/blockchains-and-g20-building-inclusive-transparent-and-accountable-digital-economy?source=2017" target="_blank"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the Report</a>
+      </div>
+      <div class="lightbox-link">
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-play" aria-hidden="true"></i>Watch the companion video to Julie Maupin’s report on realizing policy through blockchain
+          
+        </a>
       </div>
     </div>
-    
-  </section>
+  </div>
+  <div class="fullscreen-bg">
+    <video loop muted autoplay class="fullscreen-bg-video">
+      <source src="{{ "/data/blockchain_2-4mbps.mp4" | relative_url }}" type="video/mp4">
+    </video>
+  </div>
+</section>
   
