--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -369,6 +369,9 @@ p {
 
 //Financials Slide
 .financials{
+  .clear{
+    clear: both;
+  }
   h1{
     margin-bottom: 1rem;
   }
@@ -414,14 +417,12 @@ p {
         background: rgb(204,203,200);
         padding: 0.5rem 0;
         margin-bottom: 0.5rem;
-        height: 4.75rem;
+        height: 3.75rem;
       }
       td{
         text-align: center;
-        font-size: 1rem;
-        font-weight: 500;
+        font-weight: 600;
         padding: 0 0.25rem;
-
         &:nth-child(1){
           border-right: solid 0.5rem $default-background-color;
         }
@@ -433,11 +434,11 @@ p {
       td{
         &:nth-child(1){
           text-align: left;
-          padding: 0.125rem 0 0.125rem 1rem;
+          padding-left: 1rem;
         }
         &:nth-child(2){
           text-align: right;
-          padding: 0.125rem 1rem 0.125rem 0;
+          padding-right: 1rem;
         }
       }
       .section{
