--- a/_includes/slide17.html
+++ b/_includes/slide17.html
@@ -16,8 +16,10 @@
                     </div>
                 </div>
                 <div class="tab" data-id="tab-2">
-                    {% include slide17-sheet1.html %}
-                    {% include slide17-sheet2.html %}
+                    <div class="clear">
+                        {% include slide17-sheet1.html %}
+                        {% include slide17-sheet2.html %}
+                    </div>
                 </div>
                 <div class="tab" data-id="tab-3">  
                     <div class="notes">
