fix clear float

--- a/_includes/slide17.html
+++ b/_includes/slide17.html
@@ -15,11 +15,11 @@
                         {% include slide17-auditor.html %}
                     </div>
                 </div>
-                <div class="tab" data-id="tab-2">
-                    <div class="clear">
+                <div class="tab cf" data-id="tab-2">
+                   
                         {% include slide17-sheet1.html %}
                         {% include slide17-sheet2.html %}
-                    </div>
+                 
                 </div>
                 <div class="tab" data-id="tab-3">  
                     <div class="notes">
