adding drop caps

--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -112,6 +112,15 @@ header .tabs{
   }
 }
 
+.dropcap {
+    border: 1px solid;
+    float: left;
+    font-size: 2.75em;
+    font-weight: 500;
+    line-height: 0.75em;
+    margin-right: 8px;
+    padding: 0.1em 0.25em;
+}
 
 p {
   padding-bottom: 1rem;
