--- a/_includes/home.html
+++ b/_includes/home.html
@@ -11,19 +11,22 @@
             <div class="nav">
                 <div class="explore">
                     <div class="up pointer">
-                        <i class="fa fa-angle-up arrow-3" aria-hidden="true"></i>
-                        <i class="fa fa-angle-up arrow-2" aria-hidden="true"></i>
-                        <i class="fa fa-angle-up arrow-1" aria-hidden="true"></i>
+                        <div class="arrows">
+                            <i class="fa fa-angle-up arrow arrow-1" aria-hidden="true"></i>
+                            <i class="fa fa-angle-up arrow arrow-2" aria-hidden="true"></i>
+                        </div>
                     </div>
                     <div id="explore-cigi-link" class="no-underline link pointer">Explore CIGI</div>
                 </div>
                 <div class="view-ar">
                     <div id="view-ar-link" class="no-underline link pointer">View Annual Report</div>
                     <div class="down pointer">
-                        <i class="fa fa-angle-down arrow-1" aria-hidden="true"></i>
-                        <i class="fa fa-angle-down arrow-2" aria-hidden="true"></i>
-                        <i class="fa fa-angle-down arrow-3" aria-hidden="true"></i>
+                        <div class="arrows">
+                            <i class="fa fa-angle-down arrow arrow-2" aria-hidden="true"></i>
+                            <i class="fa fa-angle-down arrow arrow-1" aria-hidden="true"></i>
+                        </div>
                     </div>
+                    
                 </div>
             </div>
         </div>
