adding new background for landing page

--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -1,5 +1,9 @@
 //Background Images
 
+.landing{
+  background-image: url('../assets/CIGI_Campus-bw-min.jpg');
+}
+
 .cover-slide{
   background-image: url('../assets/cigi-campus-min.jpg');
 }
@@ -101,10 +105,6 @@ header .tabs{
     &.selected {
       display: block;
     }
-
-    h1 {
-      flex: 100%;
-    }
   }
 }
 
@@ -124,6 +124,7 @@ p {
 
 //Cover Slide
 
+.landing,
 .cover-slide,
 .standard-slide {
   background-position: center;
@@ -134,7 +135,10 @@ p {
   .wrapper{
     position: relative;
   }
+}
 
+.cover-slide,
+.standard-slide{
   h1 {
     font-size: 3rem;
     line-height: 3.35rem;
@@ -170,6 +174,9 @@ p {
 }
 
 .joint-message, .financials {
+  h1{
+    margin-bottom: 1rem;
+  }
   h3 {
     display: none;
   }
@@ -192,6 +199,7 @@ p {
   }
 }
 
+.landing::before,
 .cover-slide::before,
 .standard-slide::before {
   //background: linear-gradient(rgba(242, 240, 234, 0.15), rgba(242, 240, 234, 0.875));
@@ -206,34 +214,38 @@ p {
   width: 100%;
 }
 
+.landing::before{
+  background: linear-gradient(to right, rgba(227, 12, 58, 0.6), rgba(227, 12, 58, 0.6));
+}
 // Landing Page
 .landing{
   .wrapper{
     position: relative;
   }
+  color: white;
 
-  .circle{
-    position: absolute;
-    top: 25%;
-    left: 13%;
-    width: 500px;
-    height: 500px;
-    border-radius: 50%;
-    border: solid 1px rgb(210,211,205);
+  // .circle{
+  //   position: absolute;
+  //   top: 25%;
+  //   left: 13%;
+  //   width: 500px;
+  //   height: 500px;
+  //   border-radius: 50%;
+  //   border: solid 1px rgb(210,211,205);
 
-  }
+  // }
 
-  .arc {
-    position: absolute;
-    top: 23%;
-    left: 11%;
-    width: 540px;
-    height: 540px;
-    border: dashed 1px transparent;
-    border-left-color: rgb(120,120,118);
-    border-radius: 50%;
-    transform: rotate(-55deg);
-  }
+  // .arc {
+  //   position: absolute;
+  //   top: 23%;
+  //   left: 11%;
+  //   width: 540px;
+  //   height: 540px;
+  //   border: dashed 1px transparent;
+  //   border-left-color: rgb(120,120,118);
+  //   border-radius: 50%;
+  //   transform: rotate(-55deg);
+  // }
 
   .content-wrapper{
     z-index: 100;
@@ -256,7 +268,6 @@ p {
     font-size: 9rem;
     line-height: 73%;
     font-weight: 800;
-    color: rgba(120,120,118, 0.85);
 
     span{
       margin-left: -2rem;
@@ -274,10 +285,9 @@ p {
 
     .link {
       float: left;
-      border-top: solid 1px $grey-color;
+      border-top: solid 1px white;
       padding-top: 0.3rem;
       text-transform: uppercase;
-      color: $accent-color;
       font-weight: 500;
 
       &:hover{
@@ -288,7 +298,7 @@ p {
       position: relative;
     }
     .explore .link{
-      border-right: solid 1px $grey-color;
+      border-right: solid 1px white;
       padding-right: 1rem;
     }
 
@@ -325,7 +335,7 @@ p {
       position: absolute;
       transform-origin: 0%;
       transform: translate3d(-50%, -50%, 0);
-      color: $accent-color;
+      color: white;
     }
     
     .arrow-1{
