--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,4 +1,4 @@
-<section class="vh-100 default-background landing slide-1">
+<section class="vh-100 landing slide-1">
   <div class="wrapper h-100">
       <div class="circle"></div>
       <div class="arc"></div>
