--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
   <a href="{{ "https://www.cigionline.org" }}" class="mv4-ns"><img id="cigi-logo" src="{{ "/assets/cigi-logo.svg" | relative_url }}" alt="CIGI Logo" class="w-5rem-10vh dn db-ns"></a>
   <div class="flex mt3 mt0-ns">
       <div class="tabs mr3">
-          <div class="tab">Explore CIGI</div>
-          <div class="tab">Annual Report</div>
+          <div id="explore-cigi-link" class="tab">Explore CIGI</div>
+          <div id="view-ar-link" class="tab">Annual Report</div>
       </div>
     <div class="f4"><a class="no-underline black" id="global-share-facebook" target="_blank"><i class="fa fa-facebook"></i></a></div>
     <div class="f4 pl1 ml3"><a class="no-underline black" id="global-share-twitter" target="_blank"><i class="fa fa-twitter"></i></a></div>
