adding signature for auditor

--- a/_includes/slide17-auditor.html
+++ b/_includes/slide17-auditor.html
@@ -6,4 +6,5 @@
 <p>Our responsibility is to express an opinion on the summary financial statements based on our procedures, which were conducted in accordance with Canadian Auditing Standard 810, “Engagements to Report on Summary Financial Statements”.</p>
 <p><strong>Opinion</strong></p>
 <p>In our opinion, the summary financial statements derived from the financial statements of the Organization as at, and for the year ended, July 31, 2016 are a fair summary of those financial statements, in accordance with Canadian accounting standards for not-for-profit organizations.</p>
+<div><img src="{{ "/assets/auditors-sig.png" | relative_url }}" alt="Zeifmans LLP"></div>   
 <p>Chartered Accountants<br>Licensed Public Accountants<br>Toronto, Ontario</p>
