adding book covers, currently hide them on mobile

--- a/_includes/slide6.html
+++ b/_includes/slide6.html
@@ -1,6 +1,9 @@
 <section class="vh-100 standard-slide slide-6">
   <div class="wrapper h-100">
     <div class="absolute bottom-0 pb4 pr4 pb6-ns w-80-l">
+      <div class="book-cover">
+          <img src="{{ "/assets/lookwhostalking-cover.png" | relative_url }}" alt="Book Cover for Look Who's Talking">
+      </div>
       {% markdown template_content/slide6-gcig.md %}
       <div class="view-article pb2 pt2">
         <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/look-whos-watching-surveillance-treachery-and-trust-online?source=ar2017" target="_blank"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Book</a>
