--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -172,6 +172,14 @@ p {
     padding-left: 0.2rem;
     font-size: 0.55rem;
   }
+
+  .book-cover{
+    float: left;
+    margin-right: 2rem;
+    @include media-query($on-laptop){
+      display: none;
+    }
+  }
 }
 
 .joint-message, .financials {
