hide nav items on slide 1

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header id="site-header" class="site-header wrapper w-100 z-8 flex justify-between items-center" role="banner">
   <a href="{{ "https://www.cigionline.org" }}" class="mv4-ns"><img id="cigi-logo" src="{{ "/assets/cigi-logo.svg" | relative_url }}" alt="CIGI Logo" class="w-5rem-10vh dn db-ns"></a>
   <div class="flex mt3 mt0-ns">
-      <div class="tabs mr3">
+      <div id="main-tabs" class="tabs mr3">
           <div id="explore-cigi-link" class="tab">Explore CIGI</div>
           <div id="view-ar-link" class="tab">Annual Report</div>
       </div>
