--- a/_includes/slide8.html
+++ b/_includes/slide8.html
@@ -8,6 +8,9 @@
       <div class="lightbox-link">
           <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-play" aria-hidden="true"></i>Watch Senior Fellow John Borrows explain why UNDRIP is a legal opportunity for Canada's constitution.</a>
       </div>
+      <div class="photo-caption">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor facilisis consectetur.</p>
+      </div>
     </div>
   </div>
 </section>
