--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,8 @@
           <div id="explore-cigi-link" class="tab">Explore CIGI</div>
           <div id="view-ar-link" class="tab">Annual Report</div>
       </div>
-    <div class="f4"><a class="no-underline black" id="global-share-facebook" target="_blank"><i class="fa fa-facebook"></i></a></div>
-    <div class="f4 pl1 ml3"><a class="no-underline black" id="global-share-twitter" target="_blank"><i class="fa fa-twitter"></i></a></div>
-    <div id="table-of-contents-button" class="pt1 pl1 ml3 pointer white"></div>
+    <div class="f4"><a class="no-underline" id="global-share-facebook" target="_blank"><i class="fa fa-facebook"></i></a></div>
+    <div class="f4 pl1 ml3"><a class="no-underline" id="global-share-twitter" target="_blank"><i class="fa fa-twitter"></i></a></div>
+    <div id="table-of-contents-button" class="pt1 pl1 ml3 pointer"></div>
   </div>
 </header>
