update landing page up/down functionality

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -9,7 +9,7 @@
             <div class="title">CIGI<br><span>2017</span></div>
             <div class="intro">Opening with the sensational arrest of IMF Managing Director Dominique Strauss-Kahn, the book reveals that this sordid episode was only one in a series of setbacks for the IMF as financial conflagration spread from Greece to Ireland, Portugal, Spain, Italy and Cyprus — threatening to engulf a region comprising nearly one-fifth of world economic output.</div>
             <div class="nav">
-                <div id="explore-cigi-link" class="explore">
+                <div class="explore">
                     <div class="up pointer">
                         <div class="arrows">
                             <i class="fa fa-angle-up arrow arrow-1" aria-hidden="true"></i>
@@ -18,7 +18,7 @@
                     </div>
                     <div class="no-underline link pointer">Explore CIGI</div>
                 </div>
-                <div id="view-ar-link" class="view-ar">
+                <div class="view-ar">
                     <div class="no-underline link pointer">View Annual Report</div>
                     <div class="down pointer">
                         <div class="arrows">
