adding photo caption functionality

--- a/_includes/slide8.html
+++ b/_includes/slide8.html
@@ -9,7 +9,7 @@
           <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-play" aria-hidden="true"></i>Watch Senior Fellow John Borrows explain why UNDRIP is a legal opportunity for Canada's constitution.</a>
       </div>
       <div class="photo-caption">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor facilisis consectetur.</p>
+        <p><em>Natives Playing on the Land</em> by Lawrence Paul Yuxweluptun</p>
       </div>
     </div>
   </div>
