--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -122,7 +122,7 @@ header .tabs{
 .photo-caption{
   padding-top: 2em;
   color: $grey-color-dark;
-  :before{
+  p:before{
     content: "\f030";
     font-size: 0.8em;
     font-family: FontAwesome;
@@ -132,6 +132,10 @@ header .tabs{
     color: $accent-color;
     margin-right: 0.5em;
   }
+}
+
+.no-opacity{
+  opacity:0;
 }
 
 p {
@@ -235,6 +239,16 @@ p {
   position: absolute;
   top: 0;
   width: 100%;
+}
+
+.hide::before {
+  opacity: 0;
+  transition: opacity 1s ease-in;
+}
+
+.hide-text {
+  opacity: 0;
+  transition: opacity 1s ease-in;
 }
 
 .landing::before{
