--- a/_includes/slide16.html
+++ b/_includes/slide16.html
@@ -9,7 +9,10 @@
         <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-play" aria-hidden="true"></i>Watch the companion video to Julie Maupin’s report on realizing policy through blockchain
           
         </a>
-    </div>
+      </div>
+      <div class="photo-caption">
+        <p>Global Solutions/Tobias Koch</p>
+      </div>
     </div>
   </div>
 </section>
