--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -10,12 +10,16 @@
 }
 
 .slide-5 {
-  
+  background-image: url('../assets/nafta.jpg');
 }
 
-.slide-6{}
+.slide-6{
+  background-image: url('../assets/LWW_background-image.jpg');
+}
 
-.slide-7{}
+.slide-7{
+  background-image: url('../assets/laid_low_bg.jpg');
+}
 
 .slide-8 {
   background-image: url('../assets/UNDRIP-min.jpg');
