--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -134,28 +134,44 @@ header .tabs{
   float: left;
   font-size: 2.75em;
   font-weight: 500;
-  line-height: 0.75em;
+  line-height: 0.5em;
   margin-right: 8px;
   padding: 0.1em 0.25em;
 }
 
 .photo-caption{
-  padding-top: 2em;
   color: $grey-color-dark;
-  p:before{
-    content: "\f030";
-    font-size: 0.8em;
-    font-family: FontAwesome;
-    border-radius: 50%;
-    border: 1px solid;
-    padding: 0.3em;
-    color: $accent-color;
-    margin-right: 0.5em;
+  display: inline-block;
+  margin-left: -1em;
+  margin-top: 2em;
+  padding: 0.5em;
+  p {
+    padding: 0;
+    &:before{
+      border-radius: 50%;
+      border: 1px solid;
+      color: $accent-color;
+      content: "\f030";
+      font-family: FontAwesome;
+      font-size: 0.8em;
+      margin-right: 0.5em;
+      padding: 0.3em;
+    }
+  }
+  &:hover {
+    background-color: rgba(0,0,0,0.5);
+    border-radius: 9999px;
+    color: $grey-color;
+    transition: color 1s ease-in, background-color 1s ease-in;
+    p:before {
+      color: $grey-color;
+      transition: color 1s ease-in;
+    }
   }
 }
 
 .no-opacity{
-  opacity:0;
+  opacity: 0;
 }
 
 p {
