--- a/_assets/css/custom/mobile.scss
+++ b/_assets/css/custom/mobile.scss
@@ -24,9 +24,33 @@
             margin-top: 0;
         }
     }
+    .show-on-mobile{
+        display: inline-block;
+    }
+    .fixed.sidebar, .navigation-top-button, .navigation-bottom-button {
+        display:none;
+    }
     .download {
         a {
             margin-top: 0;
+        }
+    }
+    .mobile-toc {
+        height: 100vh;
+        width: 100vw;
+        h1 {
+            color: white;
+            font-size: 1.25em;
+            line-height: 1.5em;
+        }
+    }
+    .hidden {
+        display:none;
+    }
+    .header-inverse{
+        background: black;
+        i {
+            color: white;
         }
     }
 }
