Fix table of contents color issue

--- a/_assets/css/base.scss
+++ b/_assets/css/base.scss
@@ -137,7 +137,7 @@ hr {
   left: 50%;
   position: fixed;
   transform: translateX(-50%);
-  transition: all 1s ease;
+  transition: transform 1s ease;
 
   &.top {
     transform: translate(-50%, -100%);
