Add lightbox for linked media

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -27,6 +27,7 @@ layout: compress
       {% include slide15.html %}
       {% include slide16.html %}
       {% include slide17.html %}
+      {% include lightbox.html %}
       {% include gallery.html %}
 
       <script src="{{ site.assets_base_url }}/assets/bundle{{ site.env.HASH }}.js"></script>
