--- a/_includes/slide12.html
+++ b/_includes/slide12.html
@@ -4,13 +4,13 @@
       {% markdown template_content/slide12-refugee.md %}
       <div class="lightbox-link">
           <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-play" aria-hidden="true"></i>Watch Lloyd Axworthy introduce the World Refugee Council.
-            
+
           </a>
       </div>
     </div>
   </div>
   <div class="fullscreen-bg">
-      <video loop muted autoplay class="fullscreen-bg-video">
+      <video loop muted class="fullscreen-bg-video">
           <source src="{{ "/data/WRC-Loop2-Crossfade-2-4mbps.mp4" | relative_url }}" type="video/mp4">
       </video>
   </div>
