--- a/_includes/slide14.html
+++ b/_includes/slide14.html
@@ -7,15 +7,14 @@
       </div>
       <div class="lightbox-link">
         <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-play" aria-hidden="true"></i>Watch the companion video to Julie Maupin’s report on realizing policy through blockchain
-          
+
         </a>
       </div>
     </div>
   </div>
   <div class="fullscreen-bg">
-    <video loop muted autoplay class="fullscreen-bg-video">
+    <video loop muted class="fullscreen-bg-video">
       <source src="{{ "/data/blockchain_2-4mbps.mp4" | relative_url }}" type="video/mp4">
     </video>
   </div>
 </section>
-  
