--- a/_includes/slide4.html
+++ b/_includes/slide4.html
@@ -8,11 +8,11 @@
         <div class="lightbox-link">
             <a class="no-underline pointer underline-hover" href="#"><i class="fa fa-play" aria-hidden="true"></i>Watch CIGI President Rohinton P. Medhora introduce the New Thinking on Innovation series</a>
         </div>
-        
+
       </div>
     </div>
     <div class="fullscreen-bg">
-      <video loop muted autoplay class="fullscreen-bg-video">
+      <video loop muted class="fullscreen-bg-video">
           <source src="{{ "/data/WebLoop_3.mp4" | relative_url }}" type="video/mp4">
       </video>
     </div>
