adding mobile functionality

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -8,6 +8,7 @@ layout: compress
 
   <body>
     {% include header.html %}
+    {% include toc-mobile.html %}
     <div id="smooth-slide-container">
       {% include timeline.html %}
       {% include home.html %}
