--- a/_assets/css/base.scss
+++ b/_assets/css/base.scss
@@ -131,6 +131,10 @@ hr {
     max-width: calc(#{$content-width} - (#{$spacing-unit}));
     padding: 0;
   }
+  @include media-query($on-palm) {
+    max-width: 100vw;
+    padding: 0.5em 1em;
+  }
 }
 
 .site-header {
