--- a/_assets/css/custom/mobile.scss
+++ b/_assets/css/custom/mobile.scss
@@ -1,10 +1,12 @@
 @media (max-width: 450px){
+    section {
+        min-height: 100vh;
+    }
     .standard-slide{
         overflow: inherit;
-        padding: 2em 0;
+        padding: 3em 0;
     }
     .wrapper {
-        position: auto;
     }
     .pb4, .pr4 {
         padding: 0;
@@ -37,13 +39,21 @@
         }
     }
     .toc-mobile-wrapper {
-        padding-top: 2em;
+        padding-top: 4em;
         height: 100vh;
         width: 100vw;
         background: black;
         color: white;
         position: fixed;
         z-index: 200;
+        ul {
+            padding: 0 2em;
+            font-size: 1em;
+            list-style: none;
+            li {
+                padding: 0.25em;
+            }
+        }      
     }
    
     .header-inverse.site-header.wrapper{
