adding mobile button

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -29,6 +29,7 @@ layout: compress
       {% include slide16.html %}
       {% include slide17.html %}
       {% include gallery.html %}
+      {% include mobile-button.html %}
 
       <script src="{{ site.assets_base_url }}/assets/bundle{{ site.env.HASH }}.js"></script>
     </div>
