--- a/_assets/css/custom/mobile.scss
+++ b/_assets/css/custom/mobile.scss
@@ -3,11 +3,9 @@
         min-height: 100vh;
         overflow: inherit;
         border-bottom: solid 1px $grey-color-dark;
-        //background-image: none !important;
         background: $background-color;
     }
-
-    .standard-slide {
+    .standard-slide, .slide-1 {
         padding: 3em 0;
     }
     .pb4, .pr4 {
@@ -112,5 +110,15 @@
         &:before {
             background: none !important;
         }
+    }
+    .mobile-button{
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        background: $accent-color;
+        color: white;
+        padding: 2px 10px 7px 10px;
+        border-radius: 50%;
+        font-size: 2em;
     }
 }
