adding timeline message for mobile

--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -45,4 +45,9 @@
       <div class="relative w-100 self-center" id="timeline-root"></div>
     </div>
   </div>
+
+  <div class="mobile-timeline-message hidden">
+    <h1>Sorry.</h1>
+    <p><em>Explore CIGI</em> cannot be displayed on your mobile device. For the best experience, please view on a desktop browser.</p>
+  </div>
 </section>
