--- a/_includes/home.html
+++ b/_includes/home.html
@@ -7,7 +7,7 @@
         {% markdown template_content/home.md %}
         <div class="content col">
             <div class="title">CIGI<br><span>2017</span></div>
-            <div class="intro">Opening with the sensational arrest of IMF Managing Director Dominique Strauss-Kahn, the book reveals that this sordid episode was only one in a series of setbacks for the IMF as financial conflagration spread from Greece to Ireland, Portugal, Spain, Italy and Cyprus — threatening to engulf a region comprising nearly one-fifth of world economic output.</div>
+            <div class="intro">We are the Centre for International Governance Innovation: an independent, non-partisan think tank with an objective and uniquely global perspective. Our research, opinions and public voice make a difference in today’s world by bringing clarity and innovative thinking to global policy making.</div>
             <div class="nav">
                 <div class="explore">
                     <div class="up pointer">
