--- a/_assets/css/custom/mobile.scss
+++ b/_assets/css/custom/mobile.scss
@@ -117,8 +117,11 @@
         right: 20px;
         background: $accent-color;
         color: white;
-        padding: 2px 10px 7px 10px;
+        padding: 2px 10px 5px 10px;
         border-radius: 50%;
         font-size: 2em;
+    }
+    .visibility-none{
+        visibility: hidden;
     }
 }
