tresting for mobile

--- a/_includes/toc-mobile.html
+++ b/_includes/toc-mobile.html
@@ -1,11 +1,11 @@
 <div class="toc-mobile-wrapper hidden">
     <ul>
-        <li><a href="../#/?slide=0" class="toc-mobile-item toc-slide-0">Message about desktop</a></li>
-        <li><a href="../#/?slide=1" class="toc-mobile-item toc-slide-1">CIGI 2017</a></li>
-        <li><a href="../#/?slide=2" class="toc-mobile-item toc-slide-2">Influential Research. Trusted Analysis</a></li>
-        <li><a href="../#/?slide=3" class="toc-mobile-item toc-slide-3 president">President’s Message</a></li>
-        <li><a href="../#/?slide=3" class="toc-mobile-item toc-slide-3 chair">Chair's Message</a></li>
-        <li><a href="../#/?slide=4" class="toc-mobile-item toc-slide-4">New Thinking on Innovation</a></li>
+        <li><a href="#/?slide=0" class="toc-mobile-item toc-slide-0">Message about desktop</a></li>
+        <li><a href="2017annualreport/#/?slide=1" class="toc-mobile-item toc-slide-1">CIGI 2017</a></li>
+        <li><a href="2017annualreport/#/?slide=2" class="toc-mobile-item toc-slide-2">Influential Research. Trusted Analysis</a></li>
+        <li><a href="2017annualreport/#/?slide=3" class="toc-mobile-item toc-slide-3 president">President’s Message</a></li>
+        <li><a href="2017annualreport/#/?slide=3" class="toc-mobile-item toc-slide-3 chair">Chair's Message</a></li>
+        <li><a href="2017annualreport/#/?slide=4" class="toc-mobile-item toc-slide-4">New Thinking on Innovation</a></li>
         <li><a href="../#/?slide=5" class="toc-mobile-item toc-slide-5">Modernizing NAFTA</a></li>
         <li><a href="../#/?slide=6" class="toc-mobile-item toc-slide-6">Surveillance, Treachery and Trust Online</a></li>
         <li><a href="../#/?slide=7" class="toc-mobile-item toc-slide-7">Lessons from the Euro-zone Crisis</a></li>
