fix tooltip and h1 on landing page

--- a/_assets/css/custom/navigation.scss
+++ b/_assets/css/custom/navigation.scss
@@ -55,7 +55,12 @@ $sidebar-button-radius: 1rem;
   padding-left: 1px;
   position: relative;
   width: $sidebar-button-radius;
-  font-family: fontAwesome;
+  &.fa-home{
+    font-family: fontAwesome;
+    .sidebar-tooltip{
+      font-family: $base-font-family;
+    }
+  }
 
   &.active {
     color: $accent-color;
