background image for slide 10

--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -29,15 +29,9 @@
   background-image: url('../assets/north-of-60-2.jpg');
 }
 
-.slide-10{}
-
-.slide-11{}
-
-.slide-12{}
-
-.slide-13{}
-
-.slide-14{}
+.slide-10{
+  background-image: url('../assets/low-carbon-economy-min.jpg');
+}
 
 .slide-15 {
   background-image: url('../assets/IMF-min.jpg');
