add family photo to last slide and rename to slide18

--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -41,6 +41,10 @@
   background-image: url('../assets/G20-min.jpg');
 }
 
+.slide-18 {
+  background-image: url('../assets/CIGI_Family_Photo_v1.jpg');
+}
+
 
 .fullscreen-bg {
   bottom: 0;
@@ -192,6 +196,9 @@ p {
   background-size: cover;
   overflow: hidden;
   position: relative;
+  &.slide-18{
+    background-position: right;
+  }
   
   .wrapper{
     position: relative;
@@ -220,6 +227,10 @@ p {
     &:hover{
       color: $accent-color-50;
     }
+  }
+
+  .lightbox-link{
+    color: $accent-color;
   }
   
   .fa{
@@ -256,7 +267,6 @@ p {
     font-size: 1.1rem;
   }
   h1 {
-    text-align: center;
     color: $accent-color;
     font-size: 2.75rem;
     margin-bottom: 2rem;
