--- a/_includes/slide18.html
+++ b/_includes/slide18.html
@@ -1,4 +1,4 @@
-<section class="vh-100 default-background relative">
+<section class="vh-100 standard-slide slide-18">
   <script src="https://platform.twitter.com/widgets.js"></script>
   <script src="https://www.youtube.com/player_api"></script>
   <div class="wrapper h-100 pt6">
