--- a/_includes/slide4.html
+++ b/_includes/slide4.html
@@ -5,8 +5,9 @@
         <div class="view-article pb2 pt2">
             <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017" target="_blank"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Full Article</a>
         </div>
+        
         <div class="lightbox-link">
-            <a class="no-underline pointer underline-hover" href="#"><i class="fa fa-play" aria-hidden="true"></i>Watch CIGI President Rohinton P. Medhora introduce the New Thinking on Innovation series</a>
+            <div class="youtube-lightbox pointer" data-videoid="s-QpV6AG-qg"><i class="fa fa-play" aria-hidden="true"></i>Watch CIGI President Rohinton P. Medhora introduce the New Thinking on Innovation series</div>
         </div>
 
       </div>
@@ -17,3 +18,5 @@
       </video>
     </div>
   </section>
+
+  
