--- a/_includes/slide6.html
+++ b/_includes/slide6.html
@@ -9,6 +9,9 @@
         <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/look-whos-watching-surveillance-treachery-and-trust-online?source=ar2017" target="_blank"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Book</a>
       </div>
       <div class="lightbox-link">
+          <div class="lightbox-link">
+              <div class="youtube-lightbox pointer" data-videoid="s-QpV6AG-qg"><i class="fa fa-play" aria-hidden="true"></i>Watch CIGI President Rohinton P. Medhora introduce the New Thinking on Innovation series</div>
+          </div>
         <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-volume-down" aria-hidden="true"></i>Listen to former CBC Radio host Mary Ambrose interview Fen Osler Hampson about Look Who’s Watching</a>
     </div>
     </div>
