--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -28,7 +28,7 @@ layout: compress
       {% include slide15.html %}
       {% include slide16.html %}
       {% include slide17.html %}
-      {% include lightbox.html %}
+      {% include slide18.html %}
       {% include gallery.html %}
       {% include mobile-button.html %}
 
